--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <title>CIS Project</title>
     <style>
         #map { height: 98vh; width: 100%;}
+
+        div.leaflet-control-attribution.leaflet-control {
+            display: none;
+        }
+
+
+        #map > div.leaflet-control-container > div.leaflet-bottom.leaflet-right > div
     </style>
 </head>
 <body>
