--- a/index.html
+++ b/index.html
@@ -24,102 +24,222 @@
     <meta charset="UTF-8">
     <title>CIS Project</title>
     <style>
-        #map { height: 98vh; width: 100%;}
+        :root {
+            --DropwDown_Width: 500px;
+            --DropwDown_Height: 30px;
+            --MapWidth: 1000px;
+            --MapHeight: 600px;
+        }
+        body {
+            background:
+                    linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
+                    linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
+                    linear-gradient(315deg, black 25%, transparent 25%),
+                    linear-gradient(45deg, black 25%, transparent 25%);
+            background-size: 2em 2em;
+            background-color: #232323;
+        }
+        #map {
+            /*https://calculateaspectratio.com/*/
+            /*4:3*/
+            width: var(--MapWidth);
+            height: var(--MapHeight);
+            z-index: 1;
+        }
 
         div.leaflet-control-attribution.leaflet-control {
             display: none;
         }
 
+        table, th, td {
+            margin: 0 auto 0 auto; /* or margin: 0 auto 0 auto */
+            border: 1px dashed green;
+        }
+
+        #mapContent {
+            margin: 0 auto;
+        }
+        #graph1 {
+            margin: 0 auto;
+            color: green;
+            text-align: center;
+        }
+        #graph2 {
+            margin: 0 auto;
+            color: green;
+            text-align: center;
+        }
+
+        /*BASIC BUTTON DROP DOWN
+          https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button
+        */
+        .dropbtn {
+            background-color: green;
+            color: white;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            width: var(--DropwDown_Width);
+            height: var(--DropwDown_Height);
+            z-index: 200;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+            z-index: 200;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: var(--DropwDown_Width);
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 99;
+            text-align: center;
+        }
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            width: inherit;
+            z-index: 99;
+        }
+        .dropdown-content a:hover {background-color: #f1f1f1}
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+        .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+        }
+
     </style>
 </head>
 <body>
-<div id="map">
-    <script>
-        const coords = "./Data/average-latitude-longitude-countries.csv";
+
+<table>
+    <tr>
+        <td style="text-align: center">
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+        </td>
+        <td style="text-align: center">
+            <div class="dropdown">
+                <button class="dropbtn"> Button </button>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <div id="mapContent">
+                <div id="map">
+                    <script>
+                        const coords = "./Data/average-latitude-longitude-countries.csv";
+
+                        bounds = new L.LatLngBounds(new L.LatLng(-89.93411921886802, -1326.0937500000002), new L.LatLng(89.93411921886802, 1326.0937500000002));
+                        var map = new L.map('map').setView([0, 0], 0);
+
+                        L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
+                            maxZoom: 7,
+                            minZoom: 3,
+                            attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
+                        }).addTo(map);
+                        //L.Control.geocoder().addTo(map);
+                        // https://gis.stackexchange.com/questions/179630/setting-bounds-and-making-map-bounce-back-if-moved-away
+                        map.setMaxBounds(bounds);
+
+                        console.log(map.getBounds());
+                        //icons
+                        var female = L.icon({
+                            iconUrl: './Assets/female-icon.png',
+                            iconSize: [38, 60], // size of the icon
+                            iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
+                            popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
+                        });
+                        var male = L.icon({
+                            iconUrl: './Assets/male icon.png',
+                            iconSize: [38, 60], // size of the icon
+                            iconAnchor: [35, 94], // point of the icon which will correspond to marker's location
+                            popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
+                        });
+
+                        Promise.all([
+                            d3.csv(coords)
+                        ]).then(data => {
+                            const shit = data[0]
+
+                            shit.forEach((x, i) =>
+                                L.marker([x.Latitude, x.Longitude], {icon: female}).addTo(map).bindPopup(x.Country)
+                            )
+                            shit.forEach((x, i) =>
+                                L.marker([x.Latitude, x.Longitude], {icon: male}).addTo(map).bindPopup(x.Country)
+                            )
+                        })
+
+                        /*map.on('click', function(e) {
+                            var temp = e.latlng
+
+                            //var popup = L.popup(e.latlng, {content: '<p>Hello world!<br />This is a nice popup.</p>'}).openOn(map)
+                        });*/
+                        var marker = {};
+                        const apiKey = "AAPK920a0bb6164f4771baac441d0777575211yFWL2LGNrd0dDnqiWYxTHLbFtOeOkNSLpat_-3ep2q84eDxGvbV_Ipyn6WCPhi"
+                        const layerGroup = L.layerGroup().addTo(map);
+
+                        map.on('click', function (e) {
+                            if (marker != undefined) {
+                                map.removeLayer(marker);
+                            }
+                            ;
+                            marker = new L.marker(e.latlng, {draggable: true}).addTo(map);
+                            L.esri.Geocoding
+                                .reverseGeocode({
+                                    apikey: apiKey
+                                })
+                                .latlng(e.latlng)
+
+                                .run(function (error, result) {
+                                    if (error) {
+                                        return;
+                                    }
+
+                                    layerGroup.clearLayers();
+
+                                    console.log(result)
+                                    console.log(result.address.CntryName)
+                                });
 
 
-        bounds = new L.LatLngBounds(new L.LatLng(-89.93411921886802, -1326.0937500000002), new L.LatLng(89.93411921886802, 1326.0937500000002));
-        var map = new L.map('map').setView([0, 0], 0);
+                            // console.log(typeof bitch)
+                            //console.log(bitch)
+                            // console.log(bitch)
+                        });
 
-        L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
-            maxZoom: 7,
-            minZoom: 3,
-            attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
-        }).addTo(map);
-        //L.Control.geocoder().addTo(map);
-        // https://gis.stackexchange.com/questions/179630/setting-bounds-and-making-map-bounce-back-if-moved-away
-        map.setMaxBounds(bounds);
+                    </script>
+                </div>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div id="graph1">
+                GRAPH 1
+            </div>
+        </td>
+        <td>
+            <div  id="graph2">
+                GRAPH 2
+            </div>
+        </td>
+    </tr>
 
-        console.log(map.getBounds());
-        //icons
-        var female = L.icon({
-            iconUrl: './Assets/female-icon.png',
-            iconSize:     [38, 60], // size of the icon
-            iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-            popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-        });
-        var male = L.icon({
-            iconUrl: './Assets/male icon.png',
-            iconSize:     [38, 60], // size of the icon
-            iconAnchor:   [35, 94], // point of the icon which will correspond to marker's location
-            popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-        });
+</table>
 
 
-
-        Promise.all([
-            d3.csv(coords)
-        ]).then(data => {
-            const shit = data[0]
-
-            shit.forEach((x, i) =>
-                L.marker([x.Latitude, x.Longitude], {icon: female}).addTo(map).bindPopup(x.Country)
-            )
-            shit.forEach((x, i) =>
-                L.marker([x.Latitude, x.Longitude], {icon: male}).addTo(map).bindPopup(x.Country)
-            )
-        })
-
-        /*map.on('click', function(e) {
-            var temp = e.latlng
-
-            //var popup = L.popup(e.latlng, {content: '<p>Hello world!<br />This is a nice popup.</p>'}).openOn(map)
-        });*/
-        var marker = {};
-        const apiKey = "AAPK920a0bb6164f4771baac441d0777575211yFWL2LGNrd0dDnqiWYxTHLbFtOeOkNSLpat_-3ep2q84eDxGvbV_Ipyn6WCPhi"
-        const layerGroup = L.layerGroup().addTo(map);
-
-        map.on('click', function(e){
-            if (marker != undefined) {
-                map.removeLayer(marker);
-            };
-            marker = new L.marker(e.latlng, {draggable:true}).addTo(map);
-            L.esri.Geocoding
-                .reverseGeocode({
-                    apikey: apiKey
-                })
-                .latlng(e.latlng)
-
-                .run(function (error, result) {
-                    if (error) {
-                        return;
-                    }
-
-                    layerGroup.clearLayers();
-
-                    console.log(result)
-                    console.log(result.address.CntryName)
-                });
-
-
-
-               // console.log(typeof bitch)
-                //console.log(bitch)
-               // console.log(bitch)
-        });
-
-    </script>
-
-</div>
 </body>
 </html>
