--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--  Our JS  -->
     <script src="./js/dropdown.js"></script>
     <script src="./js/mapcontent.js" defer></script>
-    <script src="./js/mkScatter.js"></script>
+    <script src="js/mkPlots.js"></script>
     <script src="./js/windowManager.js" defer></script>
 
 </head>
