--- a/scatter2.html
+++ b/scatter2.html
@@ -18,7 +18,7 @@
 <body>
     <div id="scatter">
     <script >
-        mkScatter("AU","#scatter")
+        mkPlots("AU","#scatter")
     </script>
     </div>
 </body>
