--- a/scatter2.html
+++ b/scatter2.html
@@ -17,9 +17,9 @@
     </style>
 </head>
 <body>
-    <div id="scatter">
+    <div id="thing">
     <script >
-        document.getElementById("scatter").innerHTML = mkLegend();
+        let thing = mkLegend("#thing")
     </script>
     </div>
 </body>
