--- a/scatter2.html
+++ b/scatter2.html
@@ -6,6 +6,7 @@
     <script src="..\..\lib\d3.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script src="..\..\js\legend.js"></script>
+    <script src="..\..\js\mkPlots.js"></script>
 
     <style>
         :root {
@@ -19,7 +20,11 @@
 <body>
     <div id="thing">
     <script >
-        let thing = mkLegend("#thing")
+        // let thing = mkLegend("#thing")
+
+        mkScattery("CL","#thing")
+
+
     </script>
     </div>
 </body>
