added comments and source min js

--- a/scatter2.html
+++ b/scatter2.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!--The regression js must come b4 d3-->
+    <!--https://observablehq.com/@harrystevens/introducing-d3-regression#linear-->
+    <!--https://github.com/harrystevens/d3-regression-->
+    <!--https://stackoverflow.com/questions/56478304/plot-regression-line-on-a-scatter-plot-from-regression-coefficients-->
     <script src="https://unpkg.com/d3-regression@1.3.10/dist/d3-regression.min.js"></script>
     <script src="..\..\lib\d3.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
