--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://unpkg.com/esri-leaflet-geocoder"></script>
 
     <!--  DJ3 JS  -->
+    <script src="https://unpkg.com/d3-regression@1.3.10/dist/d3-regression.min.js"></script>
     <script src="./lib/d3.js"></script>
     <script src="./lib/topojson.v1.min.js"></script>
 
