--- a/scatter2.html
+++ b/scatter2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--This is a test pad-->
     <meta charset="UTF-8">
     <title>Title</title>
     <!--The regression js must come b4 d3-->
@@ -27,11 +28,10 @@
     <div id="thing">
     <script >
 
-        //mkScattery("CL","#thing")
+        mkScattery("CL","#thing")
         // mkLineGraph("CL","#thing")
-        mkRegression("US","#thing")
-
-
+        // mkRegression("US","#thing")
+        // mkScatterH("US","#thing")
     </script>
     </div>
 </body>
